@startuml
left to right direction
skinparam classAttributeIconSize 0

class Facts {
    - generalFacts : std::vector<std::string>
    - romanNumeralFacts : std::vector<std::string>
    - generalFactsDisplayed : mutable std::vector<bool>
    - romanNumeralFactsDisplayed : mutable std::vector<bool>
    + Facts() : void
    + getRandomGeneralFact() : std::string
    + getRandomRomanNumeralFact() : std::string
    + resetFactsDisplayStatus() : void
    + allFactsDisplayed() : bool const
    - loadFactsFromFile(filePath : const std::string&, facts : std::vector<std::string>&) : void
}

class Menu {
    - converter : RomanConverter
    - quiz : Quiz
    - facts : Facts
    + start() : void
}

class Quiz {
    - score : int
    - questions : std::vector<std::pair<int, std::string>>
    - answeredCorrectly : std::vector<bool>
    - currentQuestionIndex : size_t
    + Quiz() : void
    + getCurrentQuestionIndex() : size_t const
    + getNextQuestion() : std::pair<int, std::string>
    + checkAnswer(userAnswer : const std::string&) : bool
    + getScore() : int const
    + resetQuiz() : void
    + start() : void
}

class RomanConverter {
    - roman_map : std::map<char, int>
    - valid_subtractors : std::string
    - non_repeatable : std::string
    + RomanConverter() : void
    + isValidRoman(roman : const std::string&) : bool
    + Roman2Dec(roman : const std::string&) : int
}

class GameGUI {
    - ui : Ui::GameGUIClass*
    - converter : RomanConverter
    - quiz : Quiz
    - facts : Facts
    - feedbackTimer : QTimer*
    + GameGUI(parent : QWidget*) : void
    + ~GameGUI() : void
    + on_convert2DecimalClicked() : void
    + on_convert2RomanClicked() : void
    + on_startQuizButton_clicked() : void
    + on_submitAnswerButton_clicked() : void
    + proceedToNextQuestion() : void
    + displayNextQuestion() : void
    + updateScoreDisplay() : void
    + showRandomGeneralFact() : void
    + showRandomRomanNumeralFact() : void
}

Menu "1" --> "1" Quiz : uses >
Menu "1" --> "1" Facts : uses >
Menu "1" --> "1" RomanConverter : uses >
GameGUI *-- "1" Ui::GameGUIClass : contains >
GameGUI --> "1" RomanConverter : uses >
GameGUI --> "1" Quiz : uses >
GameGUI --> "1" Facts : uses >
GameGUI ..> "1" QTimer : uses >

@enduml
